SONARJAVA-4202 Fix SanityTest to cover all test files